--- a/src/phonesurvey/styles.module.css
+++ b/src/phonesurvey/styles.module.css
@@ -106,7 +106,7 @@
 .listItemContainer {
     margin-bottom: 20px;
     background: #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: rgba(100, 100, 111, 0.1) 0px 7px 15px 0px;
     border-radius: 15px;
     padding: 10px;
     width: min(90%, 400px);
@@ -144,28 +144,22 @@
     justify-content: flex-end;
 }
 
-.primaryBtnListView:hover {
-    cursor: pointer;
-}
-
-.primaryBtnListView:active {
-    filter: brightness(80%);
-}
-
 .primaryBtnListView {
+    composes: primaryBtn from '/src/globalStyles.css';
+    margin-top: 0;
     margin-left: 10px;
     width: 100px;
     height: 40px;
-    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
-    line-height: 36px;
-    letter-spacing: 0.25px;
-    color: white;
-    text-shadow: 0 4px 8px rgba(38, 50, 56, 0.08);
-    box-sizing: border-box;
-    border: 1px solid #6C5CE7;
-    border-radius: 16px;
-    background: #6C5CE7;
+}
+
+.primaryBtnListView:hover {
+    box-shadow: None;
+}
+
+.primaryBtn {
+    composes: primaryBtn from '/src/globalStyles.css';
+    margin-top: 0;
 }
